# harness-router

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
plans/: aps-rules.md  index.aps.md  issues.md  project-context.md
plans/execution/: .actions.template.md
plans/modules/: .index-monorepo.template.md  .module.template.md  .simple.template.md
src/: adapter.rs  cli.rs  commands.rs  config.rs  invoke.rs  main.rs
