[package]
name = "harness-router"
version = "0.1.0"
edition = "2021"
description = "Switch between multiple OAuth/API accounts for AI coding CLIs (Claude Code, Codex, opencode, grok)"
license = "MIT"
repository = "https://github.com/joshuaboys/harness-router"
readme = "README.md"

[[bin]]
name = "hr"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
anyhow = "1"
rpassword = "7"

[profile.release]
strip = true
lto = true
opt-level = "z"
