[package]
name = "harness-router"
version = "0.2.2"
edition = "2021"
description = "Switch between multiple OAuth/API accounts for AI coding CLIs (Claude Code, Codex, opencode, grok, GitHub Copilot, Antigravity)"
license = "MIT"
repository = "https://github.com/joshuaboys/harness-router"
readme = "README.md"
keywords = ["cli", "oauth", "accounts", "ai", "router"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "hr"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "1"
dirs = "6"
anyhow = "1"
rpassword = "7"

[profile.release]
strip = true
lto = true
opt-level = "z"
